# latency-arbitrage-simulator

./: README.md  app.py  pyproject.toml  requirements.txt
notebooks/: exploration.ipynb
src/simulator/: __init__.py  core.py  exchange.py  strategy.py  utils.py
tests/: test_core.py
